fix: #149 알림 목록 조회 검증 이슈 해결